--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
     <p> Nesta pagina voce ira encontrar os melhores filmes de aventura para o seu fim de semana
 
   <iframe width="560" height="315" src="https://www.youtube.com/embed/J51n65tKBmM?si=AIGA8DHO7dACZ_Ia" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/vTzE7sTXGqI?si=M0QdSgebj1Ntrqpa" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/voHkMen3h68?si=i4JMKECm746Ei9iu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>,
+ <iframe width="560" height="315" src="https://www.youtube.com/embed/B2BhVzH209M?si=TaLW67UBg_p8hIu5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
  
 </body>
